--- a/README
+++ b/README
@@ -3,16 +3,13 @@ gstreamer0.10-plugins-base
 A collection of plugins for the GStreamer media framework.
 
 Runtime requirements:
-  cygwin-1.7.0-48
+  cygwin-1.7.0-60
   alternatives
-  libglib2.0_0-2.20.3-1
-  libgstreamer0.10_0-0.10.23-1
-  libintl8-0.17-10
-  liboil0.3_0-0.3.15-10
+  libglib2.0_0-2.20.5-1
+  libgstreamer0.10_0-0.10.24-1
+  libintl8-0.17-11
+  liboil0.3_0-0.3.16-1
 
-(cdparanoia)
-  libcdio_cdda0-0.81-10
-  libcdio_paranoia0-0.81-10
 (libvisual)
   libvisual0.4_0-0.4.0-10
   libvisual0.4-plugins-0.4.0-10
@@ -27,19 +24,19 @@ Runtime requirements:
   libvorbis0-1.2.0-1
   libvorbisenc2-1.2.0-1
 (ximage)
-  libX11_6-1.2-10
+  libX11_6-1.2.2-1
   libXext6-1.0.5-1
 
 Build requirements:
 (besides corresponding -devel packages)
   autoconf2.5-2.63-10
   automake1.9-1.9.6-10
-  binutils-20080624-2
-  cygport-0.9.6-1
-  gawk-3.1.6-2
+  binutils-2.19.51-1
+  cygport-0.9.9-1
+  gawk-3.1.7-1
   gcc4-core-4.3.2-2
   gtk-doc-1.11-2
-  libtool-2.2.7a-12
+  libtool-2.2.7a-14
   make-3.81-2
   pkg-config-0.23b-10
   python-2.5.4-10
@@ -54,484 +51,58 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gstreamer0.10-plugins-base-0.10.23-X-src.tar.bz2
+  unpack gstreamer0.10-plugins-base-0.10.24-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gstreamer0.10-plugins-base-0.10.23-X.cygport all
+  cygport ./gstreamer0.10-plugins-base-0.10.24-X.cygport all
 
 This will create:
-  /usr/src/gstreamer0.10-plugins-base-0.10.23-X-src.tar.bz2
-  /usr/src/gstreamer0.10-plugins-base-0.10.23-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-base-devel-0.10.23-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-cdparanoia-0.10.23-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-gio-0.10.23-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-libvisual-0.10.23-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-ogg-0.10.23-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-pango-0.10.23-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-theora-0.10.23-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-vorbis-0.10.23-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-ximage-0.10.23-X.tar.bz2
-  /usr/src/libgstapp0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgstapp0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgstaudio0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgstaudio0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgstcdda0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgstcdda0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgstfft0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgstfft0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgstfloatcast0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgstinterfaces0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgstinterfaces0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgstnetbuffer0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgstnetbuffer0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgstpbutils0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgstpbutils0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgstriff0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgstriff0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgstrtp0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgstrtp0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgstrtsp0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgstrtsp0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgstsdp0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgstsdp0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgsttag0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgsttag0.10_0-0.10.23-X.tar.bz2
-  /usr/src/libgstvideo0.10-devel-0.10.23-X.tar.bz2
-  /usr/src/libgstvideo0.10_0-0.10.23-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-base-0.10.24-X-src.tar.bz2
+  /usr/src/gstreamer0.10-plugins-base-0.10.24-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-base-devel-0.10.24-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-gio-0.10.24-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-libvisual-0.10.24-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-ogg-0.10.24-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-pango-0.10.24-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-theora-0.10.24-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-vorbis-0.10.24-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-ximage-0.10.24-X.tar.bz2
+  /usr/src/libgstapp0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgstapp0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgstaudio0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgstaudio0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgstcdda0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgstcdda0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgstfft0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgstfft0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgstfloatcast0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgstinterfaces0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgstinterfaces0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgstnetbuffer0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgstnetbuffer0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgstpbutils0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgstpbutils0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgstriff0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgstriff0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgstrtp0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgstrtp0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgstrtsp0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgstrtsp0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgstsdp0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgstsdp0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgsttag0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgsttag0.10_0-0.10.24-X.tar.bz2
+  /usr/src/libgstvideo0.10-devel-0.10.24-X.tar.bz2
+  /usr/src/libgstvideo0.10_0-0.10.24-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the binary packages:
-
-(gstreamer0.10-plugins-base)
-  /etc/postinstall/gstreamer0.10-plugins-base.sh
-  /etc/preremove/gstreamer0.10-plugins-base.sh
-  /usr/bin/gst-visualise-0.10
-  /usr/lib/gstreamer-0.10/cyggstadder.dll
-  /usr/lib/gstreamer-0.10/cyggstaudioconvert.dll
-  /usr/lib/gstreamer-0.10/cyggstaudiorate.dll
-  /usr/lib/gstreamer-0.10/cyggstaudioresample.dll
-  /usr/lib/gstreamer-0.10/cyggstaudiotestsrc.dll
-  /usr/lib/gstreamer-0.10/cyggstdecodebin.dll
-  /usr/lib/gstreamer-0.10/cyggstdecodebin2.dll
-  /usr/lib/gstreamer-0.10/cyggstffmpegcolorspace.dll
-  /usr/lib/gstreamer-0.10/cyggstgdp.dll
-  /usr/lib/gstreamer-0.10/cyggstplaybin.dll
-  /usr/lib/gstreamer-0.10/cyggstqueue2.dll
-  /usr/lib/gstreamer-0.10/cyggstsubparse.dll
-  /usr/lib/gstreamer-0.10/cyggsttcp.dll
-  /usr/lib/gstreamer-0.10/cyggsttypefindfunctions.dll
-  /usr/lib/gstreamer-0.10/cyggstvideorate.dll
-  /usr/lib/gstreamer-0.10/cyggstvideoscale.dll
-  /usr/lib/gstreamer-0.10/cyggstvideotestsrc.dll
-  /usr/lib/gstreamer-0.10/cyggstvolume.dll
-  /usr/lib/gstreamer-0.10/libgstadder.la
-  /usr/lib/gstreamer-0.10/libgstaudioconvert.la
-  /usr/lib/gstreamer-0.10/libgstaudiorate.la
-  /usr/lib/gstreamer-0.10/libgstaudioresample.la
-  /usr/lib/gstreamer-0.10/libgstaudiotestsrc.la
-  /usr/lib/gstreamer-0.10/libgstdecodebin.la
-  /usr/lib/gstreamer-0.10/libgstdecodebin2.la
-  /usr/lib/gstreamer-0.10/libgstffmpegcolorspace.la
-  /usr/lib/gstreamer-0.10/libgstgdp.la
-  /usr/lib/gstreamer-0.10/libgstplaybin.la
-  /usr/lib/gstreamer-0.10/libgstqueue2.la
-  /usr/lib/gstreamer-0.10/libgstsubparse.la
-  /usr/lib/gstreamer-0.10/libgsttcp.la
-  /usr/lib/gstreamer-0.10/libgsttypefindfunctions.la
-  /usr/lib/gstreamer-0.10/libgstvideorate.la
-  /usr/lib/gstreamer-0.10/libgstvideoscale.la
-  /usr/lib/gstreamer-0.10/libgstvideotestsrc.la
-  /usr/lib/gstreamer-0.10/libgstvolume.la
-  /usr/share/doc/gstreamer0.10-plugins-base/ABOUT-NLS
-  /usr/share/doc/gstreamer0.10-plugins-base/AUTHORS
-  /usr/share/doc/gstreamer0.10-plugins-base/COPYING
-  /usr/share/doc/gstreamer0.10-plugins-base/COPYING.LIB
-  /usr/share/doc/gstreamer0.10-plugins-base/ChangeLog
-  /usr/share/doc/gstreamer0.10-plugins-base/NEWS
-  /usr/share/doc/gstreamer0.10-plugins-base/README
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/GstPlayBaseBin.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/ch01.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/ch02.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/ch03.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-0.10.devhelp
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-0.10.devhelp2
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-adder.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-app.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-alsamixer.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-alsasink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-alsasrc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-audioconvert.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-audioresample.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-audiotestsrc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-cdparanoiasrc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-clockoverlay.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-decodebin.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-decodebin2.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-ffmpegcolorspace.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-gdpdepay.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-gdppay.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-giosink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-giosrc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-giostreamsink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-giostreamsrc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-gnomevfssink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-gnomevfssrc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-multifdsink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-oggdemux.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-oggmux.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-playbin.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-playbin2.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-adder.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-app.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-alsa.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-audioconvert.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-audiorate.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-audioresample.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-audiotestsrc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-cdparanoia.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-decodebin.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-decodebin2.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-ffmpegcolorspace.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-gdp.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-gio.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-gnomevfs.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-libvisual.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-ogg.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-pango.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-playback.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-subparse.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-tcp.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-theora.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-typefindfunctions.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-uridecodebin.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-video4linux.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-videorate.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-videoscale.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-videotestsrc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-volume.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-vorbis.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-ximagesink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-xvimagesink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-tcpserversink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-textoverlay.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-textrender.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-theoradec.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-theoraenc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-theoraparse.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-timeoverlay.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-uridecodebin.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-videorate.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-videoscale.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-videotestsrc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-volume.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-vorbisdec.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-vorbisenc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-vorbisparse.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-vorbistag.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-ximagesink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-xvimagesink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/home.png
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/index.html
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/index.sgml
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/left.png
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/right.png
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/style.css
-  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/up.png
-  /usr/share/locale/af/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/az/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/bg/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/ca/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/cs/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/da/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/de/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/en_GB/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/es/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/fi/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/hu/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/it/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/nb/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/nl/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/or/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/pl/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/sk/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/sq/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/sr/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/sv/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/uk/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/vi/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/locale/zh_CN/LC_MESSAGES/gst-plugins-base-0.10.mo
-  /usr/share/man/man1/gst-visualise-0.10.1.gz
-
-(gstreamer0.10-plugins-cdparanoia)
-  /usr/lib/gstreamer-0.10/cyggstcdparanoia.dll
-  /usr/lib/gstreamer-0.10/libgstcdparanoia.la
-
-(gstreamer0.10-plugins-gio)
-  /usr/lib/gstreamer-0.10/cyggstgio.dll
-  /usr/lib/gstreamer-0.10/libgstgio.la
-
-(gstreamer0.10-plugins-libvisual)
-  /usr/lib/gstreamer-0.10/cyggstlibvisual.dll
-  /usr/lib/gstreamer-0.10/libgstlibvisual.la
-
-(gstreamer0.10-plugins-ogg)
-  /usr/lib/gstreamer-0.10/cyggstogg.dll
-  /usr/lib/gstreamer-0.10/libgstogg.la
-
-(gstreamer0.10-plugins-pango)
-  /usr/lib/gstreamer-0.10/cyggstpango.dll
-  /usr/lib/gstreamer-0.10/libgstpango.la
-
-(gstreamer0.10-plugins-theora)
-  /usr/lib/gstreamer-0.10/cyggsttheora.dll
-  /usr/lib/gstreamer-0.10/libgsttheora.la
-
-(gstreamer0.10-plugins-vorbis)
-  /usr/lib/gstreamer-0.10/cyggstvorbis.dll
-  /usr/lib/gstreamer-0.10/libgstvorbis.la
-
-(gstreamer0.10-plugins-ximage)
-  /usr/lib/gstreamer-0.10/cyggstximagesink.dll
-  /usr/lib/gstreamer-0.10/libgstximagesink.la
-
-(libgst*0.10_0)
-  /usr/bin/cyggstapp-0.10-0.dll
-
-  /usr/bin/cyggstaudio-0.10-0.dll
-
-  /usr/bin/cyggstcdda-0.10-0.dll
-
-  /usr/bin/cyggstfft-0.10-0.dll
-
-  /usr/bin/cyggstinterfaces-0.10-0.dll
-
-  /usr/bin/cyggstnetbuffer-0.10-0.dll
-
-  /usr/bin/cyggstpbutils-0.10-0.dll
-
-  /usr/bin/cyggstriff-0.10-0.dll
-
-  /usr/bin/cyggstrtp-0.10-0.dll
-
-  /usr/bin/cyggstrtsp-0.10-0.dll
-
-  /usr/bin/cyggstsdp-0.10-0.dll
-
-  /usr/bin/cyggsttag-0.10-0.dll
-
-  /usr/bin/cyggstvideo-0.10-0.dll
-
-(libgst*0.10-devel)
-  /usr/include/gstreamer-0.10/gst/app/gstappbuffer.h
-  /usr/include/gstreamer-0.10/gst/app/gstappsink.h
-  /usr/include/gstreamer-0.10/gst/app/gstappsrc.h
-  /usr/lib/libgstapp-0.10.dll.a
-  /usr/lib/libgstapp-0.10.la
-  /usr/lib/pkgconfig/gstreamer-app-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/audio/audio.h
-  /usr/include/gstreamer-0.10/gst/audio/gstaudioclock.h
-  /usr/include/gstreamer-0.10/gst/audio/gstaudiofilter.h
-  /usr/include/gstreamer-0.10/gst/audio/gstaudiosink.h
-  /usr/include/gstreamer-0.10/gst/audio/gstaudiosrc.h
-  /usr/include/gstreamer-0.10/gst/audio/gstbaseaudiosink.h
-  /usr/include/gstreamer-0.10/gst/audio/gstbaseaudiosrc.h
-  /usr/include/gstreamer-0.10/gst/audio/gstringbuffer.h
-  /usr/include/gstreamer-0.10/gst/audio/mixerutils.h
-  /usr/include/gstreamer-0.10/gst/audio/multichannel-enumtypes.h
-  /usr/include/gstreamer-0.10/gst/audio/multichannel.h
-  /usr/lib/libgstaudio-0.10.dll.a
-  /usr/lib/libgstaudio-0.10.la
-  /usr/lib/pkgconfig/gstreamer-audio-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/cdda/gstcddabasesrc.h
-  /usr/lib/libgstcdda-0.10.dll.a
-  /usr/lib/libgstcdda-0.10.la
-  /usr/lib/pkgconfig/gstreamer-cdda-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/fft/gstfft.h
-  /usr/include/gstreamer-0.10/gst/fft/gstfftf32.h
-  /usr/include/gstreamer-0.10/gst/fft/gstfftf64.h
-  /usr/include/gstreamer-0.10/gst/fft/gstffts16.h
-  /usr/include/gstreamer-0.10/gst/fft/gstffts32.h
-  /usr/lib/libgstfft-0.10.dll.a
-  /usr/lib/libgstfft-0.10.la
-  /usr/lib/pkgconfig/gstreamer-fft-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/floatcast/floatcast.h
-  /usr/lib/pkgconfig/gstreamer-floatcast-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/interfaces/colorbalance.h
-  /usr/include/gstreamer-0.10/gst/interfaces/colorbalancechannel.h
-  /usr/include/gstreamer-0.10/gst/interfaces/interfaces-enumtypes.h
-  /usr/include/gstreamer-0.10/gst/interfaces/mixer.h
-  /usr/include/gstreamer-0.10/gst/interfaces/mixeroptions.h
-  /usr/include/gstreamer-0.10/gst/interfaces/mixertrack.h
-  /usr/include/gstreamer-0.10/gst/interfaces/navigation.h
-  /usr/include/gstreamer-0.10/gst/interfaces/propertyprobe.h
-  /usr/include/gstreamer-0.10/gst/interfaces/tuner.h
-  /usr/include/gstreamer-0.10/gst/interfaces/tunerchannel.h
-  /usr/include/gstreamer-0.10/gst/interfaces/tunernorm.h
-  /usr/include/gstreamer-0.10/gst/interfaces/videoorientation.h
-  /usr/include/gstreamer-0.10/gst/interfaces/xoverlay.h
-  /usr/lib/libgstinterfaces-0.10.dll.a
-  /usr/lib/libgstinterfaces-0.10.la
-  /usr/lib/pkgconfig/gstreamer-interfaces-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/netbuffer/gstnetbuffer.h
-  /usr/lib/libgstnetbuffer-0.10.dll.a
-  /usr/lib/libgstnetbuffer-0.10.la
-  /usr/lib/pkgconfig/gstreamer-netbuffer-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/pbutils/descriptions.h
-  /usr/include/gstreamer-0.10/gst/pbutils/install-plugins.h
-  /usr/include/gstreamer-0.10/gst/pbutils/missing-plugins.h
-  /usr/include/gstreamer-0.10/gst/pbutils/pbutils-enumtypes.h
-  /usr/include/gstreamer-0.10/gst/pbutils/pbutils.h
-  /usr/lib/libgstpbutils-0.10.dll.a
-  /usr/lib/libgstpbutils-0.10.la
-  /usr/lib/pkgconfig/gstreamer-pbutils-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/riff/riff-ids.h
-  /usr/include/gstreamer-0.10/gst/riff/riff-media.h
-  /usr/include/gstreamer-0.10/gst/riff/riff-read.h
-  /usr/lib/libgstriff-0.10.dll.a
-  /usr/lib/libgstriff-0.10.la
-  /usr/lib/pkgconfig/gstreamer-riff-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/rtp/gstbasertpaudiopayload.h
-  /usr/include/gstreamer-0.10/gst/rtp/gstbasertpdepayload.h
-  /usr/include/gstreamer-0.10/gst/rtp/gstbasertppayload.h
-  /usr/include/gstreamer-0.10/gst/rtp/gstrtcpbuffer.h
-  /usr/include/gstreamer-0.10/gst/rtp/gstrtpbuffer.h
-  /usr/include/gstreamer-0.10/gst/rtp/gstrtppayloads.h
-  /usr/lib/libgstrtp-0.10.dll.a
-  /usr/lib/libgstrtp-0.10.la
-  /usr/lib/pkgconfig/gstreamer-rtp-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/rtsp/gstrtsp-enumtypes.h
-  /usr/include/gstreamer-0.10/gst/rtsp/gstrtspbase64.h
-  /usr/include/gstreamer-0.10/gst/rtsp/gstrtspconnection.h
-  /usr/include/gstreamer-0.10/gst/rtsp/gstrtspdefs.h
-  /usr/include/gstreamer-0.10/gst/rtsp/gstrtspextension.h
-  /usr/include/gstreamer-0.10/gst/rtsp/gstrtspmessage.h
-  /usr/include/gstreamer-0.10/gst/rtsp/gstrtsprange.h
-  /usr/include/gstreamer-0.10/gst/rtsp/gstrtsptransport.h
-  /usr/include/gstreamer-0.10/gst/rtsp/gstrtspurl.h
-  /usr/lib/libgstrtsp-0.10.dll.a
-  /usr/lib/libgstrtsp-0.10.la
-  /usr/lib/pkgconfig/gstreamer-rtsp-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/sdp/gstsdp.h
-  /usr/include/gstreamer-0.10/gst/sdp/gstsdpmessage.h
-  /usr/lib/libgstsdp-0.10.dll.a
-  /usr/lib/libgstsdp-0.10.la
-  /usr/lib/pkgconfig/gstreamer-sdp-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/tag/gsttagdemux.h
-  /usr/include/gstreamer-0.10/gst/tag/tag.h
-  /usr/lib/libgsttag-0.10.dll.a
-  /usr/lib/libgsttag-0.10.la
-  /usr/lib/pkgconfig/gstreamer-tag-0.10.pc
-
-  /usr/include/gstreamer-0.10/gst/video/gstvideofilter.h
-  /usr/include/gstreamer-0.10/gst/video/gstvideosink.h
-  /usr/include/gstreamer-0.10/gst/video/video.h
-  /usr/lib/libgstvideo-0.10.dll.a
-  /usr/lib/libgstvideo-0.10.la
-  /usr/lib/pkgconfig/gstreamer-video-0.10.pc
-
-(gstreamer0.10-plugins-base-devel)
-  /usr/lib/pkgconfig/gstreamer-plugins-base-0.10.pc
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/api-index.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/compiling.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/compiling.sgml
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-0.10.devhelp
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-0.10.devhelp2
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstaudio.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstaudioclock.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstaudiofilter.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstaudiomixerutils.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstaudiosink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstaudiosrc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstbaseaudiosink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstbaseaudiosrc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstbasertpaudiopayload.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstbasertpdepayload.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstbasertppayload.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstcddabasesrc.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstcolorbalance.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstcolorbalancechannel.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstfft.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstfftf32.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstfftf64.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstffts16.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstffts32.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstfloatcast.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstmixer.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstmixeroptions.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstmixertrack.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstmultichannel.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstnavigation.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstnetbuffer.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstpbutils.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstpbutilsdescriptions.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstpbutilsinstallplugins.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstpbutilsmissingplugins.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstpropertyprobe.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstriff.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstringbuffer.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtcpbuffer.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtpbuffer.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtppayloads.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtspbase64.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtspconnection.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtspdefs.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtspmessage.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtsprange.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtsptransport.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtspurl.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstsdpmessage.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttag.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttagdemux.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttagid3.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttagvorbis.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttuner.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttunerchannel.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttunernorm.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstvideo.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstvideofilter.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstvideoorientation.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstvideosink.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstxoverlay.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-audio.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-base-utils.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-cdda.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-ffft.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-floatcast.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-interfaces.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-libs-hierarchy.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-netbuffer.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-plugins-base.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-riff.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-rtp.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-rtsp.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-sdp.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-tag.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-video.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/home.png
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/index.html
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/index.sgml
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/left.png
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/right.png
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/style.css
-  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/up.png
-
-------------------
-
 Port Notes:
+
+----- version 0.10.24-1 -----
+Version bump.
+Removed cdparanoia plugin as it now uses API not available in libcdio.
 
 ----- version 0.10.23-1 -----
 Version bump.
